--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 </head>
 
 <body>
-
   <header>
     <div class="logo">RB</div>
   </header>
   <section class="home">
     <div class="left">
-      <div class="animation">I am Rohit Bhondekar</div>
+      <div class="animation">I am <br>Rohit Bhondekar</div>
       <!-- From Uiverse.io by JkHuger -->
       <div class="container">
         <div class="content">
@@ -55,7 +54,7 @@
       </div>
       <div class="card">
         <h2><i class='bx bxl-android'></i><br> App Devlopment <br>
-          <p>React-Native & Android Java </p>
+          <p>flutter & React-Native</p>
         </h2>
       </div>
       <div class="card">
@@ -148,6 +147,7 @@
 </div>
   </section>
 </body>
+
 <script>
   var btn1=document.querySelector('.resume .resume_content .left .btn1');
   var btn2=document.querySelector('.resume .resume_content .left .btn2');
